# drake-drone-control

./: .gitignore
simulation/quadcopter_sim/: .gitignore  BUILD.bazel  CHANGELOG.md  MODULE.bazel  README.md  README_v2.0.md  README_v3.0.md  build.sh  keyboard_input.cc  keyboard_input.h  main.cc  main.cc.save  quadcopter_controller.cc  quadcopter_controller.h  quadcopter_model.cc  quadcopter_model.h  run.sh  world.cc  world.h
